[package]
authors = ["Paul-weqe <paul1tw1@outlook.com>"]
description = "yang based serializer(so far) for Serde"
license = "MIT"
repository = "https://github.com/Paul-weqe/yang"
name = "serde_yang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
serde = { version = "1.0.192", features = ["derive", "serde_derive"]}
